--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Stripe Clock</title>
+    <title>Alchemists Simulator</title>
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
